Added computeJulianDate function to prayertimes.py (with unit test)

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ nosetests.xml
 coverage.xml
 *,cover
 .hypothesis/
+.pytest_cache/
 
 # Translations
 *.mo
@@ -69,3 +70,6 @@ target/
 # Vim
 *.swp
 *.*~
+
+# Pycharm
+.idea/
