Updated install.sh to enable running of supervisor on startup

--- a/supervisord/aroundtheclock.conf
+++ b/supervisord/aroundtheclock.conf
@@ -1,6 +1,8 @@
 [program:aroundtheclock]
 directory=/root/vboxshare/aroundtheclock
-command = python3 /root/vboxshare/aroundtheclock/prayer.py
-user = root
-stdout_logfile = ~/vboxshare/output/supervisor_log.txt
-redirect_stderr = true
+command=python3 /root/vboxshare/aroundtheclock/prayer.py
+user=root
+stdout_logfile=~/vboxshare/output/supervisor_log.txt
+redirect_stderr=true
+autostart=true
+autorestart=true
