Updated supervisor template file to be more generic

--- a/supervisord/aroundtheclock.conf
+++ b/supervisord/aroundtheclock.conf
@@ -1,8 +1,8 @@
 [program:aroundtheclock]
-directory=/root/vboxshare/aroundtheclock
-command=python3 /root/vboxshare/aroundtheclock/prayer.py
+directory=<PATH_TO_PROJECT_ROOT>/aroundtheclock
+command=python3 <PATH_TO_PROJECT_ROOT>/aroundtheclock/prayer.py
 user=root
-stdout_logfile=~/vboxshare/output/supervisor_log.txt
+stdout_logfile=<PATH_TO_PROJECT_ROOT>/output/supervisor_log.txt
 redirect_stderr=true
 autostart=true
 autorestart=true
