--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,6 @@
 [program:aroundtheclock]
 directory=<PATH_TO_PROJECT_ROOT>/aroundtheclock
-command=python3 <PATH_TO_PROJECT_ROOT>/aroundtheclock/prayer.py
-user=root
+command=<PATH_TO_PROJECT_ROOT>/run.sh
 stdout_logfile=<PATH_TO_PROJECT_ROOT>/output/supervisor_log.txt
 redirect_stderr=true
 autostart=true
