Fixed issue where project wouldn't run on Raspberry Pi properly

--- a/config.json
+++ b/config.json
@@ -14,8 +14,8 @@
   },
 
   "path" : {
-    "prayer": "../output/prayer.json",
-    "log": "../output/log.txt"
+    "prayer": "output/prayer.json",
+    "log": "output/log.txt"
   }
 }
 
