--- a/logging.ini
+++ b/logging.ini
@@ -21,7 +21,7 @@ args=(sys.stdout,)
 class=logging.handlers.RotatingFileHandler
 level=DEBUG
 formatter=standardFormatter
-args=('log.txt', 'a', 1024*1000, 10)    
+args=('output/log.txt', 'a', 1024*1000, 10)
 # 10 = Max number of backup files rotated
 # 1024 * 1000 = 1 MB max size per file
 
