Moved files into new config/ and bin/ for better modularity

--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,7 @@
 
   "path" : {
     "output": "output",
-    "logging": "logging.ini",
+    "logging": "config/logging.ini",
     "prayer": "output/prayer.json"
   }
 }
