Updated .travis.yml to send email notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ script:
 
 after_success: 
     - codecov
+
+notifications:
+  email:
+    recipients:
+     - oz.alikhan@gmail.com
+    on_success: always
+    on_failure: always
