--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ notifications:
   email:
     recipients:
      - oz.alikhan@gmail.com
-    on_success: always
+    on_success: never
     on_failure: always
