--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,26 @@
 language: python
 
 python:
-    - "3.6"
-    - "3.7"
+  - "3.6"
+  - "3.7"
 
-install:
-    - pip install -r requirements.txt
-    - pip install pytest pytest-cov codecov
-
-script:
-    - pytest --cov=./
-
-after_success: 
-    - codecov
+jobs:
+  include:
+    - stage: "Unit/Integration tests"
+      install:
+        - pip install -r requirements_python.txt
+        - pip install -r install_python_requirements.txt
+      script: pytest --cov
+      after_success: codecov
+    - stage: "Deployment"
+      install:
+        - ./bin/install.sh
+        - ./test/install_linux_requirements.sh
+      script: ./test/test_deployment.sh
 
 notifications:
   email:
     recipients:
      - oz.alikhan@gmail.com
-    on_success: never
+    on_success: always
     on_failure: always
