--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,20 @@ language: python
 
 jobs:
   include:
+    - python:
+      - "3.6"
+      - "3.7"
     - stage: "Unit/Integration tests"
-      python:
-        - "3.6"
-        - "3.7"
       install:
         - pip install -r requirements_python.txt
         - pip install -r test/requirements_test_python.txt
       script: pytest --cov
       after_success: codecov
+    - stage: "Deployment"
+      install:
+        - ./bin/install.sh
+        - ./test/install_linux_requirements.sh
+      script: ./test/test_deployment.sh
 
 notifications:
   email:
