--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language: python
 jobs:
   include:
     - stage: "Unit/Integration tests"
-      python:
-        - "3.6"
-        - "3.7"
+      matrix:
+        include:
+          python:
+            - "3.6"
+            - "3.7"
       install:
         - pip install -r requirements_python.txt
         - pip install -r test/requirements_test_python.txt
@@ -13,7 +15,7 @@ jobs:
       after_success: codecov
     - stage: "Deployment"
       install:
-        - chmod u+x /bin/install.sh && ./bin/install.sh
+        - chmod u+x ./bin/install.sh && ./bin/install.sh
         - ./test/install_linux_requirements.sh
       script: ./test/test_deployment.sh
 
