--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,25 @@
 language: python
 
-jobs:
+matrix:
   include:
+    - python:
+      - "3.6"
+      - "3.7"
     - stage: "Unit/Integration tests"
-      matrix:
-        include:
-          python:
-            - "3.6"
-            - "3.7"
       install:
         - pip install -r requirements_python.txt
         - pip install -r test/requirements_test_python.txt
       script: pytest --cov
       after_success: codecov
+
     - stage: "Deployment"
+      before_install:
+        - chmod u+x ./bin/install.sh
+        - chmod u+x ./test/requirements_test_linux.sh
+        - chmod u+x ./test/test_deployment.sh
       install:
-        - chmod u+x ./bin/install.sh && ./bin/install.sh
-        - ./test/install_linux_requirements.sh
+        - ./bin/install.sh
+        - ./test/requirements_test_linux.sh
       script: ./test/test_deployment.sh
 
 notifications:
