--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,25 @@ matrix:
     - python:
       - "3.6"
       - "3.7"
-    - stage: "Unit/Integration tests"
-      install:
-        - pip install -r requirements_python.txt
-        - pip install -r test/requirements_test_python.txt
-      script: pytest --cov
-      after_success: codecov
+    - install: skip
+    - script: skip
 
-    - stage: "Deployment"
-      before_install:
-        - chmod u+x ./bin/install.sh
-        - chmod u+x ./test/requirements_test_linux.sh
-        - chmod u+x ./test/test_deployment.sh
-      install:
-        - ./bin/install.sh
-        - ./test/requirements_test_linux.sh
-      script: ./test/test_deployment.sh
+  - stage: "Unit/Integration tests"
+    install:
+      - pip install -r requirements_python.txt
+      - pip install -r test/requirements_test_python.txt
+    script: pytest --cov
+    after_success: codecov
+
+  - stage: "Deployment"
+    before_install:
+      - chmod u+x ./bin/install.sh
+      - chmod u+x ./test/requirements_test_linux.sh
+      - chmod u+x ./test/test_deployment.sh
+    install:
+      - ./bin/install.sh
+      - ./test/requirements_test_linux.sh
+    script: ./test/test_deployment.sh
 
 notifications:
   email:
