--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,17 @@
 language: python
 
+python:
+  - "3.6"
+  - "3.7"
+
 matrix:
   include:
-    - python:
-      - "3.6"
-      - "3.7"
-    - install: skip
-    - script: skip
-
-  - stage: "Unit/Integration tests"
-    install:
-      - pip install -r requirements_python.txt
-      - pip install -r test/requirements_test_python.txt
-    script: pytest --cov
-    after_success: codecov
+    - stage: "Unit/Integration tests"
+      install:
+        - pip install -r requirements_python.txt
+        - pip install -r test/requirements_test_python.txt
+      script: pytest --cov
+      after_success: codecov
 
   - stage: "Deployment"
     before_install:
