--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
 language: python
 
-python:
-  - "3.6"
-  - "3.7"
 
 matrix:
   include:
-    - stage: "Unit/Integration tests"
-      install:
-        - pip install -r requirements_python.txt
-        - pip install -r test/requirements_test_python.txt
-      script: pytest --cov
-      after_success: codecov
+  - stage: "Unit/Integration tests"
+    python: "3.6"
+    install:
+      - pip install -r requirements_python.txt
+      - pip install -r test/requirements_test_python.txt
+    script: pytest --cov
+    after_success: codecov
 
   - stage: "Deployment"
     before_install:
