Ignore this commit message (travis debugging purposes)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,32 @@
 language: python
 
-matrix:
+python:
+  - "3.6"
+  - "3.7"
+
+install: skip
+
+jobs:
   include:
-  - python: "3.6"
-    os: "linux"
+  - stage: "Source code testing"
+    install:
+      - pip install -r requirements_python.txt
+      - pip install -r test/requirements_test_python.txt
+    script: pytest --cov=test/
+    after_success: codecov
 
-
-- stage: "Source code testing"
-  install:
-    - pip install -r requirements_python.txt
-    - pip install -r test/requirements_test_python.txt
-  script: pytest --cov=test/
-  after_success: codecov
-
-- stage: "Deployment"
-  install:
-    - ./bin/install.sh
-    - ./test/requirements_test_linux.sh
-  before_script:
-    - chmod u+x bin/install.sh
-    - chmod u+x test/requirements_test_linux.sh
-    - chmod u+x test/test_deployment.sh
-  script: ./test/test_deployment.sh
+  - stage: "Deployment"
+    install:
+      - ./bin/install.sh
+      - ./test/requirements_test_linux.sh
+    before_script:
+      - chmod u+x bin/install.sh
+      - chmod u+x test/requirements_test_linux.sh
+      - chmod u+x test/test_deployment.sh
+    script: ./test/test_deployment.sh
 
 notifications:
   email:
-    recipients:
-     - oz.alikhan@gmail.com
+    recipients: oz.alikhan@gmail.com
     on_success: always
     on_failure: always
