--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: python
 
-python:
-  - "3.6"
-  - "3.7"
-
-install: skip
-
 jobs:
   include:
-  - stage: "Source code testing"
+  - stage: "Unit/Integration Tests"
+    python:
+      - "3.6"
+      - "3.7"
+    os: "linux"
     install:
       - pip install -r requirements_python.txt
       - pip install -r test/requirements_test_python.txt
@@ -16,6 +14,10 @@ jobs:
     after_success: codecov
 
   - stage: "Deployment"
+    python:
+      - "3.6"
+      - "3.7"
+    os: "linux"
     install:
       - ./bin/install.sh
       - ./test/requirements_test_linux.sh
