--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,30 @@
 language: python
 
-jobs:
-  include:
-  - stage: "Unit/Integration Tests"
-    python:
-      - "3.6"
-      - "3.7"
-    os: "linux"
-    install:
-      - pip install -r requirements_python.txt
-      - pip install -r test/requirements_test_python.txt
-    script: pytest --cov=test/
-    after_success: codecov
+python:
+  - "3.6"
+  - "3.7"
 
-  - stage: "Deployment"
-    python:
-      - "3.6"
-      - "3.7"
-    os: "linux"
-    install:
-      - ./bin/install.sh
-      - ./test/requirements_test_linux.sh
-    script: ./test/test_deployment.sh
+os: "linux"
+
+install:
+  - pip install -r requirements_python.txt
+  - pip install -r test/requirements_test_python.txt
+
+script: pytest --cov=test/
+after_success: codecov
 
 notifications:
   email:
     recipients: oz.alikhan@gmail.com
     on_success: always
     on_failure: always
+
+jobs:
+  include:
+    - stage: "Deployment"
+      python: "3.7"
+      os: "linux"
+      install:
+        - ./bin/install.sh
+        - bats ./test/requirements_test_linux.sh
+      script: ./test/test_deployment.sh
