--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,13 @@ language: python
 python:
   - "3.6"
   - "3.7"
-
 os: "linux"
 
 install:
   - pip install -r requirements_python.txt
   - pip install -r test/requirements_test_python.txt
-
 script: pytest --cov=test/
 after_success: codecov
-
-notifications:
-  email:
-    recipients: oz.alikhan@gmail.com
-    on_success: always
-    on_failure: always
 
 jobs:
   include:
@@ -26,5 +18,11 @@ jobs:
       os: "linux"
       install:
         - ./bin/install.sh
-        - bats ./test/requirements_test_linux.sh
-      script: ./test/test_deployment.sh
+        - ./test/requirements_test_linux.sh
+      script: bats ./test/test_deployment.sh
+
+notifications:
+  email:
+    recipients: oz.alikhan@gmail.com
+    on_success: always
+    on_failure: always
