--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,13 @@ jobs:
     - stage: "Deploy"
       python: "3.7"
       os: "linux"
+      before_install:
+        - sudo apt-get update
       install:
         - ./bin/install.sh
         - ./test/requirements_linux.sh
       script: bats ./test/test_deployment.sh
+      after_script: systemctl status aroundtheclock.service
 
 ### EXTRA CONFIGURATION
 
