Ignore this commit message (travis debugging purposes)

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
         - ./test/requirements_linux.sh
       script:
         - bats ./test/test_deployment.sh
-        - journalctl -u aroundtheclock.service
+        - sudo journalctl -u aroundtheclock.service
         - systemctl status aroundtheclock.service
 
 ### EXTRA CONFIGURATION
