--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,15 @@ language: python
 
 ### JOBS THAT ARE ASSIGNED TO DEFAULT 'TEST' STAGE.
 
-python:
-  - "3.6"
-  - "3.7"
-
-install:
-  - pip install -r requirements_python.txt
-  - pip install -r test/requirements_python.txt
-script: pytest --cov=test/
-after_success: codecov
+#python:
+#  - "3.6"
+#  - "3.7"
+#
+#install:
+#  - pip install -r requirements_python.txt
+#  - pip install -r test/requirements_python.txt
+#script: pytest --cov=test/
+#after_success: codecov
 
 ### JOBS THAT ARE ASSIGNED TO 'Deploy' STAGE.
 
@@ -29,11 +29,11 @@ jobs:
         - bats ./test/test_deployment.sh
         - journalctl -u aroundtheclock.service
         - sudo systemctl restart aroundtheclock.service
-        - sudo systemctl restart firewalld.service
+        - sudo systemctl restart crond.service
         - date
         - sleep 10
         - date
-        - sudo systemctl -l status firewalld.service
+        - sudo systemctl -l status crond.service
         - sudo systemctl -l status aroundtheclock.service
 
 ### EXTRA CONFIGURATION
