Ignore this commit message (travis debugging purposes)

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,7 @@ jobs:
         - journalctl -u aroundtheclock.service
         - sudo systemctl restart aroundtheclock.service
         - sudo systemctl status
-        - sudo systemctl restart cron.service
-        - date
-        - sleep 10
-        - date
-        - sudo systemctl -l status cron.service
+        - cat /lib/systemd/system/aroundtheclock.service
         - sudo systemctl -l status aroundtheclock.service
 
 ### EXTRA CONFIGURATION
