Ignore this commit (debugging travis)

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ jobs:
         - journalctl -u aroundtheclock.service
         - sudo systemctl restart aroundtheclock.service
         - cat /lib/systemd/system/aroundtheclock.service
-        - cat /home/travis/build/OthmanEmpire/project_aroundtheclock/output/*
+        - ls /home/travis/build/OthmanEmpire/project_aroundtheclock/**
         - sudo systemctl -l status aroundtheclock.service
 
 ### EXTRA CONFIGURATION
