--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ jobs:
         - journalctl -u aroundtheclock.service
         - sudo systemctl restart aroundtheclock.service
         - cat /lib/systemd/system/aroundtheclock.service
-        - python3 project_aroundtheclock/prayer.py
+        - python3 ~/project_aroundtheclock/prayer.py
         - ls ~/project_aroundtheclock/**
         - sudo systemctl -l status aroundtheclock.service
 
