--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,9 @@ jobs:
       script:
         - bats ./test/test_deployment.sh
         - sudo ./bin/run.sh &
-        - ls ~/build/OthmanEmpire/project_aroundtheclock/**
         - sudo systemctl -l status aroundtheclock.service
+        - sudo systemctl status
+        - ls ~/build/OthmanEmpire/project_aroundtheclock/**
 
 ### EXTRA CONFIGURATION
 
