--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ jobs:
         - bats ./test/test_deployment.sh
         - sudo ./bin/run.sh &
         - sudo systemctl -l status aroundtheclock.service
-        - sudo systemctl status
+        - sudo systemctl list-units --all --type=service --no-pager
         - ls ~/build/OthmanEmpire/project_aroundtheclock/**
 
 ### EXTRA CONFIGURATION
