--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ jobs:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
+        - ls -l /home/travis/build/OthmanEmpire/project_aroundtheclock/bin/*
 
 ### EXTRA CONFIGURATION
 
