--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ jobs:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
-        - ls -l /home/travis/build/OthmanEmpire/project_aroundtheclock/bin/*
-        - sudo systemctl show aroundtheclock.service
+        - ls -nd /bin/
+        - ls -nd /bin/*
 
 ### EXTRA CONFIGURATION
 
