--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,13 @@ jobs:
       before_script:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
+        - chmod 777 -R /home/travis/build/OthmanEmpire
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
         - ls -nd ./bin/
         - ls -nd ./bin/*
-        - sudo cat /etc/passwd
-        - sudo cat ./bin/run.sh
 
 ### EXTRA CONFIGURATION
 
