--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
       before_script:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
-        - chmod 777 -R /home/travis/build/OthmanEmpire
+        - getfacl ./bin/run.sh
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
