--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ jobs:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
-        - ls -nd ./bin/
-        - ls -nd ./bin/*
+        - ls -l ./bin/*
 
 ### EXTRA CONFIGURATION
 
