--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ jobs:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
-        - ls -ll ./**
+        - ls -ld / /home /home/travis /home/travis/build /home/travis/build/OthmanEmpire /home/travis/build/OthmanEmpire
 
 ### EXTRA CONFIGURATION
 
