--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ jobs:
       before_script:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
+        - sudo chmod u+rx /home/travis
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
