--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,16 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
         - sudo chmod o+rx /home/travis
+        - cat "echo 'GG'" > /tmp/test.sh
+        - chmod a+rwx /tmp/test.sh
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
-        - ls -ld / /home /home/travis /home/travis/build /home/travis/build/OthmanEmpire /home/travis/build/OthmanEmpire
+        - ls -ld / /home /home/travis /home/travis/build /home/travis/build/OthmanEmpire
+        - ls -ld /home/travis/build/OthmanEmpire/project_aroundtheclock
+        - ls -ld /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
+        - ls -ld /home/travis/build/OthmanEmpire/project_aroundtheclock/bin/run.sh
 
 ### EXTRA CONFIGURATION
 
