--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
         - sudo chmod o+rx /home/travis
-        - cat "echo 'GG'" > /tmp/test.sh
+        - sudo cat "echo 'GG'" > /home
         - chmod a+rwx /tmp/test.sh
       script:
         - bats ./test/test_deployment.sh
