--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
         - sudo chmod o+rx /home/travis
-        - sudo cat "echo 'GG'" > /home
-        - chmod a+rwx /tmp/test.sh
+        - sudo cat "echo 'GG'" > /home/test.sh
+        - chmod a+rwx /home/test.sh
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
