--- a/.travis.yml
+++ b/.travis.yml
@@ -27,15 +27,18 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo chmod o+rx /home/travis
-        - sudo bash echo 'GG' > /tmp/test.sh
-        - chmod a+rwx /tmp/test.sh
+        - sudo bash echo 'GG' > /home/test.sh
+        - chmod a+rwx /home/test.sh
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
-        - ls -ld / /home /home/travis /home/travis/build /home/travis/build/OthmanEmpire
+        - ls -ld /
+        - ls -ld /home
+        - ls -ld /home/travis
+        - ls -ld /home/travis/build /home/travis/build/OthmanEmpire
+        - ls -ld /home/travis/build/OthmanEmpire
         - ls -ld /home/travis/build/OthmanEmpire/project_aroundtheclock
-        - ls -ld /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
         - ls -ld /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
 
 ### EXTRA CONFIGURATION
