--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,9 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo chmod o+rx /home/travis
-        - sudo bash echo 'GG' > /home/test.sh
-        - chmod a+rwx /home/test.sh
+        - touch /tmp/test.sh
+        - echo "echo 'GG'" > /tmp/test.sh
+        - chmod a+rwx /tmp/test.sh
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
