--- a/config/aroundtheclock.service
+++ b/config/aroundtheclock.service
@@ -3,7 +3,7 @@ Description=Project_AroundTheClock
 After=multi-user.target
 
 [Service]
-ExecStart=bash /tmp/test.sh
+ExecStart=/bin/bash /tmp/test.sh
 WorkingDirectory=<PATH_TO_PROJECT_ROOT>
 Type=idle
 User=travis
