--- a/.travis.yml
+++ b/.travis.yml
@@ -27,27 +27,11 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo chmod o+rx /home/travis
-        - sudo su - root
-        - su - aroundtheclock
-        - cd /
-        - cd /home
-        - cd /home/travis
-        - cd /home/travis/build /home/travis/build/OthmanEmpire
-        - cd /home/travis/build/OthmanEmpire
-        - cd /home/travis/build/OthmanEmpire/project_aroundtheclock
-        - cd /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
-        - ./home/travis/build/OthmanEmpire/project_aroundtheclock/bin/run.sh &
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
-        - ls -ld /
-        - ls -ld /home
-        - ls -ld /home/travis
-        - ls -ld /home/travis/build /home/travis/build/OthmanEmpire
-        - ls -ld /home/travis/build/OthmanEmpire
-        - ls -ld /home/travis/build/OthmanEmpire/project_aroundtheclock
-        - ls -ld /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
+        - ls -ld / /home /home/travis /home/travis/build /home/travis/build/OthmanEmpire /home/travis/build/OthmanEmpire /home/travis/build/OthmanEmpire/project_aroundtheclock /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
 
 ### EXTRA CONFIGURATION
 
