--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,13 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
       before_script:
-        - ls -ld / /home /home/travis /home/travis/build /home/travis/build/OthmanEmpire /home/travis/build/OthmanEmpire/project_aroundtheclock /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
         - sudo chmod o+rx /home/travis
+        - mount
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
         - sudo journalctl -u aroundtheclock.service
-        - ls -ld / /home /home/travis /home/travis/build /home/travis/build/OthmanEmpire /home/travis/build/OthmanEmpire /home/travis/build/OthmanEmpire/project_aroundtheclock /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
+        - namei -mo /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
 
 ### EXTRA CONFIGURATION
 
