--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo chmod o+rx /home/travis
-        - mount
+        - sudo chown -R aroundtheclock:aroundtheclock /home/travis
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
