--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
       before_script:
-        - sudo chmod -R o+rwx /home/travis
-#        - sudo chown -R aroundtheclock:aroundtheclock /home/travis
+        - sudo chmod o+rwx /home/travis
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
