--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
       before_script:
-        - sudo chmod -R o+rwx /home/travis
+        - sudo chmod -R o+rwx /home/travis/build
+        - sudo chmod -R o+rwx /home/travis/virtualenv
         - sudo ls -l /home/travis
       script:
         - bats ./test/test_deployment.sh
