--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
       before_script:
+        - sudo chmod o+rwx /home/travis
         - sudo chmod -R o+rwx /home/travis/build
         - sudo chmod -R o+rwx /home/travis/virtualenv
         - sudo ls -l /home/travis
