--- a/.travis.yml
+++ b/.travis.yml
@@ -27,15 +27,8 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo chmod o+rwx /home/travis
-        - sudo chmod -R o+rwx /home/travis/bats
-        - sudo chmod -R o+rwx /home/travis/bin
-        - sudo chmod -R o+rwx /home/travis/build
-        - sudo chmod -R o+rwx /home/travis/builds
-        - sudo chmod -R o+rwx /home/travis/build.sh
-        - sudo chmod -R o+rwx /home/travis/gopath
-        - sudo chmod -R o+rwx /home/travis/perl5
-        - sudo chmod -R o+rwx /home/travis/virtualenv
-        - sudo ls -l /home/travis
+        - sudo chmod -R o+rwx /home/travis/*
+        - sudo ls -la /home/travis
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
