--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
       before_script:
+        - sudo ls -la /home/travis
         - sudo chmod a+rwx /home/travis
         - sudo chmod -R a+rwx /home/travis/*
         - sudo chmod -R a+rwx /home/travis/.travis*
@@ -44,7 +45,7 @@ jobs:
         - sudo chmod a+rwx /home/travis/.bash_profile
         - sudo chmod a+rwx /home/travis/.bashrc
         - sudo chmod a+rwx /home/travis/.profile
-        - sudo chmod a+rwx build/home/travis/.sh
+        - sudo chmod a+rwx /home/travis/build.sh
         - sudo chmod a+rwx /home/travis/.travis_packer_templates_rspec.json
         - sudo chmod a+rwx -R /home/travis/.ssh
         - sudo chmod a+rwx -R /home/travis/.mozilla
@@ -64,8 +65,8 @@ jobs:
         - sudo chmod a+rwx -R /home/travis/.phpenv
         - sudo chmod a+rwx -R /home/travis/.rvm
         - sudo chmod a+rwx -R /home/travis/.yarn
-        - sudo chmod a+rwx -R home/travis/bin
-        - sudo chmod a+rwx -R home/travis/builds
+        - sudo chmod a+rwx -R /home/travis/bin
+        - sudo chmod a+rwx -R /home/travis/builds
         - sudo chmod a+rwx -R /home/travis/.bash_profile.d
         - sudo chmod a+rwx -R /home/travis/.travis
         - sudo chmod a+rwx -R /home/travisgopath
