--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
         - sudo ls -la /home/travis
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
+        - sudo chmod -R a+rwx /home/travis/*
         - sudo chmod a+rwx /home/travis/build.sh
         - sudo chmod a+rwx -R /home/travis/bin
         - sudo chmod a+rwx -R /home/travis/builds
