Ignore this commit (debugging travis)

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,24 @@ jobs:
         - sudo chmod a+rwx /home/travis/.profile
         - sudo chmod a+rwx /home/travis/build.sh
         - sudo chmod a+rwx /home/travis/.travis_packer_templates_rspec.json
+        - sudo chmod a+rwx -R /home/travis/.ssh
+        - sudo chmod a+rwx -R /home/travis/.mozilla
+        - sudo chmod a+rwx -R /home/travis/.gnupg
+        - sudo chmod a+rwx -R /home/travis/.cache
+        - sudo chmod a+rwx -R /home/travis/.m2
+        - sudo chmod a+rwx -R /home/travis/.gimme
+        - sudo chmod a+rwx -R /home/travis/.nvm
+        - sudo chmod a+rwx -R /home/travis/.packer.d
+        - sudo chmod a+rwx -R /home/travis/.bazaar
+        - sudo chmod a+rwx -R /home/travis/.ccache
+        - sudo chmod a+rwx -R /home/travis/.gem
+        - sudo chmod a+rwx -R /home/travis/.local
+        - sudo chmod a+rwx -R /home/travis/.lein
+        - sudo chmod a+rwx -R /home/travis/.subversion
+        - sudo chmod a+rwx -R /home/travis/.npm
+        - sudo chmod a+rwx -R /home/travis/.phpenv
+        - sudo chmod a+rwx -R /home/travis/.rvm
+        - sudo chmod a+rwx -R /home/travis/.yarn
         - sudo chmod a+rwx -R /home/travis/bin
         - sudo chmod a+rwx -R /home/travis/builds
         - sudo chmod a+rwx -R /home/travis/.bash_profile.d
