--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,10 @@ jobs:
         - sudo chmod a+rwx /home/travis/.gitconfig
         - sudo chmod a+rwx /home/travis/.my.cnf
         - sudo chmod a+rwx /home/travis/.profile
+        - sudo chmod a+rwx /home/travis/build.sh
+        - sudo chmod a+rwx -R /home/travis/.cache
+        - sudo chmod a+rwx -R /home/travis/.local
         - sudo chmod a+rwx -R /home/travis/bin
-        - sudo chmod a+rwx -R /home/travis/builds
         - sudo chmod a+rwx -R /home/travis/bats
         - sudo chmod a+rwx -R /home/travis/build
         - sudo chmod a+rwx -R /home/travis/virtualenv
